# docarchive

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: README.md
demos/01-ir-runbooks/: SCENARIO.md
demos/01-ir-runbooks/docs/: runbook-data-exfil.md  runbook-phishing.md  runbook-ransomware.md
demos/02-cti-advisories/: SCENARIO.md
demos/02-cti-advisories/docs/: advisory-commodity-loader.json  advisory-credential-stuffing.json  advisory-supply-chain-dependency.json
demos/03-vuln-disclosures/: SCENARIO.md
demos/03-vuln-disclosures/docs/: disclosure-idor-reporting-api.md  disclosure-ssrf-thumbnail.txt  disclosure-stored-xss-comments.md
demos/04-foia-records/: SCENARIO.md
demos/04-foia-records/docs/: foia-budget-summary.txt  foia-inspection-report.txt  foia-meeting-correspondence.json
demos/05-osint-field-notes/: SCENARIO.md
demos/05-osint-field-notes/docs/: note-attack-surface-inventory.md  note-breach-exposure-check.md  note-domain-monitoring.md
demos/06-appsec-findings/: SCENARIO.md
demos/06-appsec-findings/docs/: finding-hardcoded-secret.json  finding-verbose-errors.json  (+1 more)
demos/07-firmware-notes/: SCENARIO.md
demos/08-board-minutes/: SCENARIO.md
examples/: advisory-power-grid.md  declassified-weather-balloon.json  help.txt  note-osint-methods.md  report-supply-chain.txt  version.txt
src/docarchive/: __init__.py  __main__.py  cli.py  formats.py  index.py  search.py  stats.py  tokenizer.py
tests/: conftest.py  test_cli.py  test_demos.py  test_formats.py  test_index.py  test_search.py  test_stats.py  test_tokenizer.py
(+6 files in other folders)
